--- a/testTask/promiseApp.html
+++ b/testTask/promiseApp.html
@@ -8,12 +8,12 @@
         <button type="button" id="loginButton" style="margin-left: 100px;" onclick="handleLogin()">Login</button>
     </form>
 
-    <h2>Task </h2>
+    <h2>Task List</h2>
     <div id="taskList" style="margin-top: 20px;"> </div>
     
     <h2>Post New Task</h2>
     <form id="postTaskForm">
-        <label for="taskName">Task Name:</label>
+        <label for="taskName">Task No:</label>
         <input type="text" id="taskName" name="taskName"><br><br>
         <label for="taskData">Task Name:</label>
         <input type="text" id="taskData" name="taskName"><br><br>
@@ -24,7 +24,7 @@
    
     <script>
         const users = [
-            {username: '1', password: '1'},
+            {username: 'ira', password: '1'},
             {username: 'iva', password: '2'},
             {username: 'gri', password: '3'}
         ];
@@ -53,18 +53,24 @@
 
         function postData() {
             return new Promise((resolve, reject) => {
-                resolve('Data posted successfully.');
-                reject('Failed to post data.');
+                resolve('Task posted successfully.');
+                reject('Failed to post task.');
             });
         }
 
         function handleLogin() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+            const username = document.getElementById('username').value.trim();
+            const password = document.getElementById('password').value.trim();
 
+            
+            if (!username || !password) {
+                alert('Please enter both username and password.');
+                return; // Exit the function if fields are empty
+            }
             authenticateUser(username, password)
                 .then(user => {
                     console.log('Authentication successful.' + JSON.stringify(user));
+                    alert('logged successfully.');
 
                     fetchTasks() 
                         .then(tasks => {
@@ -75,7 +81,8 @@
                         });
                 })
                 .catch(error => {
-                    console.log(error); // Handle authentication error
+                    console.log(error); 
+                    alert('Invalid username or password.');// Handle authentication error
                 });
         }
 
@@ -92,20 +99,22 @@
             });
         }
 
-        function handlePostTask() {
+       function handlePostTask() {
             const taskName = document.getElementById('taskName').value;
             const taskData = document.getElementById('taskData').value;
 
             postData()
                 .then(response => {
-                    tasks.push({ [taskName]: taskData });                    
-                    alert(response);                  
+                    tasks.push({ [taskName]: taskData });
+                    displayTasks(tasks); // Update the UI with the new task
+                    alert(response);
                     console.log(JSON.stringify(tasks)); // Log or display updated tasks
                 })
                 .catch(error => {
                     console.log(error); // Log the error if posting fails
                 });
         }
+
     </script>
 </body>
 </html>
